report-viewer: fix alignment of test names/descriptions and step descriptions

--- a/report-viewer/src/custom.scss
+++ b/report-viewer/src/custom.scss
@@ -89,6 +89,16 @@ pre, samp {
 	white-space: pre-line;
 }
 
+h5 {
+	margin-top: 1px;
+	margin-bottom: 1px;
+}
+
+h6 {
+	margin-top: 1px;
+	margin-bottom: 1px;
+}
+
 .table tbody {
 	border-top-width: 0px !important;
 	border-top-style: none !important;
